commit translated contents

--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalcolorscalecriteria.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.conditionalcolorscalecriteria.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ConditionalColorScaleCriteria
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria:interface'
     summary: |-
       表示色阶的条件。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ConditionalColorScaleCriteria
     fullName: Excel.ConditionalColorScaleCriteria
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ConditionalColorScaleCriteria.maximum
-      - excel.Excel.ConditionalColorScaleCriteria.midpoint
-      - excel.Excel.ConditionalColorScaleCriteria.minimum
-  - uid: excel.Excel.ConditionalColorScaleCriteria.maximum
+      - 'excel!Excel.ConditionalColorScaleCriteria#maximum:member'
+      - 'excel!Excel.ConditionalColorScaleCriteria#midpoint:member'
+      - 'excel!Excel.ConditionalColorScaleCriteria#minimum:member'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#maximum:member'
     summary: |-
       最大点色阶条件。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: maximum
     fullName: maximum
     langs:
@@ -29,12 +29,12 @@ items:
       content: 'maximum: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
-  - uid: excel.Excel.ConditionalColorScaleCriteria.midpoint
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#midpoint:member'
     summary: |-
       色阶为 3 色阶时的中点色阶条件。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: midpoint
     fullName: midpoint
     langs:
@@ -44,12 +44,12 @@ items:
       content: 'midpoint?: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
-  - uid: excel.Excel.ConditionalColorScaleCriteria.minimum
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+  - uid: 'excel!Excel.ConditionalColorScaleCriteria#minimum:member'
     summary: |-
       最小点色阶条件。
 
-      \[[API 集: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: minimum
     fullName: minimum
     langs:
@@ -59,4 +59,7 @@ items:
       content: 'minimum: Excel.ConditionalColorScaleCriterion;'
       return:
         type:
-          - excel.Excel.ConditionalColorScaleCriterion
+          - 'excel!Excel.ConditionalColorScaleCriterion:interface'
+references:
+  - uid: 'excel!Excel.ConditionalColorScaleCriterion:interface'
+    name: Excel.ConditionalColorScaleCriterion
