--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaddedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaddedeventargs.yml
@@ -1,26 +1,26 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartAddedEventArgs
+  - uid: 'excel!Excel.ChartAddedEventArgs:interface'
     summary: |-
       提供有关引发添加的事件的图表的信息。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartAddedEventArgs
     fullName: Excel.ChartAddedEventArgs
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ChartAddedEventArgs.chartId
-      - excel.Excel.ChartAddedEventArgs.source
-      - excel.Excel.ChartAddedEventArgs.type
-      - excel.Excel.ChartAddedEventArgs.worksheetId
-  - uid: excel.Excel.ChartAddedEventArgs.chartId
+      - 'excel!Excel.ChartAddedEventArgs#chartId:member'
+      - 'excel!Excel.ChartAddedEventArgs#source:member'
+      - 'excel!Excel.ChartAddedEventArgs#type:member'
+      - 'excel!Excel.ChartAddedEventArgs#worksheetId:member'
+  - uid: 'excel!Excel.ChartAddedEventArgs#chartId:member'
     summary: |-
       获取已添加至工作表的图表的 ID。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartId
     fullName: chartId
     langs:
@@ -31,11 +31,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.ChartAddedEventArgs.source
+  - uid: 'excel!Excel.ChartAddedEventArgs#source:member'
     summary: |-
       获取事件源。 有关详细信息，请参阅 Excel.EventSource。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
@@ -45,12 +45,12 @@ items:
       content: 'source: Excel.EventSource | "Local" | "Remote";'
       return:
         type:
-          - Excel.EventSource | "Local" | "Remote"
-  - uid: excel.Excel.ChartAddedEventArgs.type
+          - 'excel!Excel.ChartAddedEventArgs#source~0:complex'
+  - uid: 'excel!Excel.ChartAddedEventArgs#type:member'
     summary: |-
       获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -61,11 +61,11 @@ items:
       return:
         type:
           - '"ChartAdded"'
-  - uid: excel.Excel.ChartAddedEventArgs.worksheetId
+  - uid: 'excel!Excel.ChartAddedEventArgs#worksheetId:member'
     summary: |-
       获取已在其中添加图表的工作表的 ID。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
@@ -76,3 +76,13 @@ items:
       return:
         type:
           - string
+references:
+  - uid: 'excel!Excel.ChartAddedEventArgs#source~0:complex'
+    name: Excel.EventSource | "Local" | "Remote"
+    fullName: Excel.EventSource | "Local" | "Remote"
+    spec.typeScript:
+      - uid: 'excel!Excel.EventSource:enum'
+        name: Excel.EventSource
+        fullName: Excel.EventSource
+      - name: ' | "Local" | "Remote"'
+        fullName: ' | "Local" | "Remote"'
