--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartloadoptions.yml
@@ -1,43 +1,43 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions:interface'
     summary: |-
       表示工作簿中的 chart 对象。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartLoadOptions
     fullName: Excel.Interfaces.ChartLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartLoadOptions.$all
-      - excel.Excel.Interfaces.ChartLoadOptions.axes
-      - excel.Excel.Interfaces.ChartLoadOptions.categoryLabelLevel
-      - excel.Excel.Interfaces.ChartLoadOptions.chartType
-      - excel.Excel.Interfaces.ChartLoadOptions.dataLabels
-      - excel.Excel.Interfaces.ChartLoadOptions.displayBlanksAs
-      - excel.Excel.Interfaces.ChartLoadOptions.format
-      - excel.Excel.Interfaces.ChartLoadOptions.height
-      - excel.Excel.Interfaces.ChartLoadOptions.id
-      - excel.Excel.Interfaces.ChartLoadOptions.left
-      - excel.Excel.Interfaces.ChartLoadOptions.legend
-      - excel.Excel.Interfaces.ChartLoadOptions.name
-      - excel.Excel.Interfaces.ChartLoadOptions.pivotOptions
-      - excel.Excel.Interfaces.ChartLoadOptions.plotArea
-      - excel.Excel.Interfaces.ChartLoadOptions.plotBy
-      - excel.Excel.Interfaces.ChartLoadOptions.plotVisibleOnly
-      - excel.Excel.Interfaces.ChartLoadOptions.series
-      - excel.Excel.Interfaces.ChartLoadOptions.seriesNameLevel
-      - excel.Excel.Interfaces.ChartLoadOptions.showAllFieldButtons
-      - excel.Excel.Interfaces.ChartLoadOptions.showDataLabelsOverMaximum
-      - excel.Excel.Interfaces.ChartLoadOptions.style
-      - excel.Excel.Interfaces.ChartLoadOptions.title
-      - excel.Excel.Interfaces.ChartLoadOptions.top
-      - excel.Excel.Interfaces.ChartLoadOptions.width
-      - excel.Excel.Interfaces.ChartLoadOptions.worksheet
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#axes:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#categoryLabelLevel:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#chartType:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#displayBlanksAs:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#format:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#id:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#left:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#legend:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#pivotOptions:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#plotArea:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#plotBy:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#plotVisibleOnly:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#series:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#seriesNameLevel:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#showDataLabelsOverMaximum:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#style:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
+      - 'excel!Excel.Interfaces.ChartLoadOptions#worksheet:member'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -48,11 +48,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.axes
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#axes:member'
     summary: |-
       表示图表坐标轴。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -62,12 +62,12 @@ items:
       content: 'axes?: Excel.Interfaces.ChartAxesLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAxesLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.categoryLabelLevel
+          - 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#categoryLabelLevel:member'
     summary: |-
       返回或设置 ChartCategoryLabelLevel 枚举常量，该常量代表分类标签源自位置的级别。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryLabelLevel
     fullName: categoryLabelLevel
     langs:
@@ -78,11 +78,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.chartType
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#chartType:member'
     summary: |-
-      表示图表的类型。 有关详细信息, 请参阅 ChartType。
+      表示图表的类型。 有关详细信息，请参阅 ChartType。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: chartType
     fullName: chartType
     langs:
@@ -93,11 +93,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.dataLabels
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#dataLabels:member'
     summary: |-
       表示图表上的数据标签。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -107,12 +107,12 @@ items:
       content: 'dataLabels?: Excel.Interfaces.ChartDataLabelsLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartDataLabelsLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.displayBlanksAs
+          - 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#displayBlanksAs:member'
     summary: |-
       返回或设置图表上的空白单元格的绘制方式。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: displayBlanksAs
     fullName: displayBlanksAs
     langs:
@@ -123,11 +123,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.format
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#format:member'
     summary: |-
       封装图表区域的格式属性。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -137,12 +137,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartAreaFormatLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartAreaFormatLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.height
+          - 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#height:member'
     summary: |-
       表示 chart 对象的高度，以磅值表示。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -153,11 +153,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.id
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#id:member'
     summary: |-
       图表的唯一 ID。 只读。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -168,11 +168,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.left
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#left:member'
     summary: |-
       从图表左侧到工作表原点的距离，以磅值表示。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -183,11 +183,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.legend
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#legend:member'
     summary: |-
       表示图表的图例。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -197,12 +197,12 @@ items:
       content: 'legend?: Excel.Interfaces.ChartLegendLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartLegendLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.name
+          - 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#name:member'
     summary: |-
       表示 chart 对象的名称。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -213,11 +213,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.pivotOptions
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#pivotOptions:member'
     summary: |-
       封装数据透视图的选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotOptions
     fullName: pivotOptions
     langs:
@@ -227,12 +227,12 @@ items:
       content: 'pivotOptions?: Excel.Interfaces.ChartPivotOptionsLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.plotArea
+          - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#plotArea:member'
     summary: |-
       表示图表的绘制区域。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotArea
     fullName: plotArea
     langs:
@@ -242,12 +242,12 @@ items:
       content: 'plotArea?: Excel.Interfaces.ChartPlotAreaLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPlotAreaLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.plotBy
+          - 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#plotBy:member'
     summary: |-
       返回或设置图表上的列或行用作数据系列的方式。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotBy
     fullName: plotBy
     langs:
@@ -258,11 +258,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.plotVisibleOnly
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#plotVisibleOnly:member'
     summary: |-
       如果仅绘制可见单元格，则为 True。 如果绘制可见单元格和隐藏单元格，则为 False。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: plotVisibleOnly
     fullName: plotVisibleOnly
     langs:
@@ -273,11 +273,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.series
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#series:member'
     summary: |-
       表示单个系列或图表中的系列集合。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
     fullName: series
     langs:
@@ -287,12 +287,12 @@ items:
       content: 'series?: Excel.Interfaces.ChartSeriesCollectionLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartSeriesCollectionLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.seriesNameLevel
+          - 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#seriesNameLevel:member'
     summary: |-
       返回或设置 ChartSeriesNameLevel 枚举常量，该常量代表系列名称源自位置的级别。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: seriesNameLevel
     fullName: seriesNameLevel
     langs:
@@ -303,11 +303,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.showAllFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#showAllFieldButtons:member'
     summary: |-
       表示是否在数据透视图上显示所有字段按钮。
 
-      \[[API 集: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAllFieldButtons
     fullName: showAllFieldButtons
     langs:
@@ -318,11 +318,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.showDataLabelsOverMaximum
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#showDataLabelsOverMaximum:member'
     summary: |-
-      表示当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小, 则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
+      表示当值大于数值轴上的最大值时是否显示数据标签。 如果数值轴变为小于数据点的大小，则可以使用此属性来设置是否显示数据标签。 该属性只适用于二维图表。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showDataLabelsOverMaximum
     fullName: showDataLabelsOverMaximum
     langs:
@@ -333,11 +333,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.style
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#style:member'
     summary: |-
       返回或设置图表的图表样式。 读/写。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -348,11 +348,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.title
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#title:member'
     summary: |-
       表示指定图表的标题，包括标题的文本、可见性、位置和格式。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -362,12 +362,12 @@ items:
       content: 'title?: Excel.Interfaces.ChartTitleLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartTitleLoadOptions
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.top
+          - 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#top:member'
     summary: |-
       表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -378,11 +378,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.width
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#width:member'
     summary: |-
       表示 chart 对象的宽度，以磅值表示。
 
-      \[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
@@ -393,11 +393,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartLoadOptions.worksheet
+  - uid: 'excel!Excel.Interfaces.ChartLoadOptions#worksheet:member'
     summary: |-
       包含当前 chart 的 worksheet 对象。
 
-      \[[API 集: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
@@ -407,4 +407,23 @@ items:
       content: 'worksheet?: Excel.Interfaces.WorksheetLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.WorksheetLoadOptions
+          - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartAxesLoadOptions:interface'
+    name: Excel.Interfaces.ChartAxesLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartDataLabelsLoadOptions:interface'
+    name: Excel.Interfaces.ChartDataLabelsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartAreaFormatLoadOptions:interface'
+    name: Excel.Interfaces.ChartAreaFormatLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
+    name: Excel.Interfaces.ChartLegendLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
+    name: Excel.Interfaces.ChartPivotOptionsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPlotAreaLoadOptions:interface'
+    name: Excel.Interfaces.ChartPlotAreaLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartSeriesCollectionLoadOptions:interface'
+    name: Excel.Interfaces.ChartSeriesCollectionLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartTitleLoadOptions:interface'
+    name: Excel.Interfaces.ChartTitleLoadOptions
+  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
+    name: Excel.Interfaces.WorksheetLoadOptions
