--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
@@ -1,30 +1,30 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData
-    summary: '一个用于更新 ChartTrendlineLabel 对象上的数据的接口, 可用于 "chartTrendlineLabel (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData:interface'
+    summary: '一个用于更新 ChartTrendlineLabel 对象上的数据的接口，可用于 "chartTrendlineLabel （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.ChartTrendlineLabelUpdateData
     fullName: Excel.Interfaces.ChartTrendlineLabelUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.linkNumberFormat
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
-      - excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.autoText
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#autoText:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#format:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#formula:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#horizontalAlignment:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#left:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#linkNumberFormat:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#numberFormat:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#text:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#textOrientation:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#top:member'
+      - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#verticalAlignment:member'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#autoText:member'
     summary: |-
       该布尔值表示趋势线标签是否根据上下文自动生成相应的文本。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
     fullName: autoText
     langs:
@@ -35,11 +35,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.format
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#format:member'
     summary: |-
       表示图表趋势线标签的格式。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -49,12 +49,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.formula
+          - 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#formula:member'
     summary: |-
       该字符串值表示采用 A1 表示法的图表趋势线标签的公式。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -65,11 +65,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.horizontalAlignment
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#horizontalAlignment:member'
     summary: |-
-      表示图表趋势线标签水平对齐。 有关详细信息, 请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的趋势线标签为90、-90 或180时, 此属性才有效。
+      表示图表趋势线标签水平对齐。 有关详细信息，请参阅 ChartTextHorizontalAlignment。 仅当 TextOrientation 的趋势线标签为90、-90 或180时，此属性才有效。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: horizontalAlignment
     fullName: horizontalAlignment
     langs:
@@ -79,12 +79,12 @@ items:
       content: 'horizontalAlignment?: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed";'
       return:
         type:
-          - Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.left
+          - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#horizontalAlignment~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#left:member'
     summary: |-
       表示图表趋势线标签左边缘到图表区域左边缘的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -95,11 +95,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.linkNumberFormat
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#linkNumberFormat:member'
     summary: |-
       布尔值，表示数字格式是否链接到单元格（以便在单元格中更改时标签中的数字格式会发生改变）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkNumberFormat
     fullName: linkNumberFormat
     langs:
@@ -110,11 +110,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.numberFormat
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#numberFormat:member'
     summary: |-
       该字符串值表示趋势线标签的格式代码。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: numberFormat
     fullName: numberFormat
     langs:
@@ -125,11 +125,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.text
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#text:member'
     summary: |-
       该字符串表示图表上的趋势线标签文本。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -140,11 +140,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.textOrientation
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#textOrientation:member'
     summary: |-
       表示图表趋势线标签的文本方向。 此值应是 -90 到 90 或 180（垂直文本）之间的整数。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
     fullName: textOrientation
     langs:
@@ -155,11 +155,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.top
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#top:member'
     summary: |-
       表示图表趋势线标签上边缘到图表区域顶部的距离，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -170,11 +170,11 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.Interfaces.ChartTrendlineLabelUpdateData.verticalAlignment
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#verticalAlignment:member'
     summary: |-
-      表示图表趋势线标签垂直对齐。 有关详细信息, 请参阅 ChartTextVerticalAlignment。 仅当 TextOrientation 的趋势线标签为0时, 此属性才有效。
+      表示图表趋势线标签垂直对齐。 有关详细信息，请参阅 ChartTextVerticalAlignment。 仅当 TextOrientation 的趋势线标签为0时，此属性才有效。
 
-      \[[API 集: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: verticalAlignment
     fullName: verticalAlignment
     langs:
@@ -184,4 +184,25 @@ items:
       content: 'verticalAlignment?: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed";'
       return:
         type:
-          - Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
+          - 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#verticalAlignment~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatUpdateData:interface'
+    name: Excel.Interfaces.ChartTrendlineLabelFormatUpdateData
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#horizontalAlignment~0:complex'
+    name: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
+    fullName: Excel.ChartTextHorizontalAlignment | "Center" | "Left" | "Right" | "Justify" | "Distributed"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartTextHorizontalAlignment:enum'
+        name: Excel.ChartTextHorizontalAlignment
+        fullName: Excel.ChartTextHorizontalAlignment
+      - name: ' | "Center" | "Left" | "Right" | "Justify" | "Distributed"'
+        fullName: ' | "Center" | "Left" | "Right" | "Justify" | "Distributed"'
+  - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#verticalAlignment~0:complex'
+    name: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
+    fullName: Excel.ChartTextVerticalAlignment | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartTextVerticalAlignment:enum'
+        name: Excel.ChartTextVerticalAlignment
+        fullName: Excel.ChartTextVerticalAlignment
+      - name: ' | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"'
+        fullName: ' | "Center" | "Bottom" | "Top" | "Justify" | "Distributed"'
