--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pagelayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.pagelayoutloadoptions.yml
@@ -1,36 +1,36 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions
-    summary: '\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions:interface'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.Interfaces.PageLayoutLoadOptions
     fullName: Excel.Interfaces.PageLayoutLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.$all
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.blackAndWhite
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.bottomMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.centerHorizontally
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.centerVertically
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.draftMode
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.firstPageNumber
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.footerMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.headerMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.headersFooters
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.leftMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.orientation
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.paperSize
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.printComments
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.printErrors
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.printGridlines
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.printHeadings
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.printOrder
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.rightMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.topMargin
-      - excel.Excel.Interfaces.PageLayoutLoadOptions.zoom
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.$all
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#blackAndWhite:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#bottomMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#centerHorizontally:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#centerVertically:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#draftMode:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#firstPageNumber:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#footerMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#headerMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#headersFooters:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#leftMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#orientation:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#paperSize:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#printComments:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#printErrors:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#printGridlines:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#printHeadings:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#printOrder:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#rightMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#topMargin:member'
+      - 'excel!Excel.Interfaces.PageLayoutLoadOptions#zoom:member'
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -41,11 +41,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.blackAndWhite
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#blackAndWhite:member'
     summary: |-
       获取或设置工作表的黑白打印选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: blackAndWhite
     fullName: blackAndWhite
     langs:
@@ -56,11 +56,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.bottomMargin
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#bottomMargin:member'
     summary: |-
       获取或设置要用于打印的工作表的底部页边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bottomMargin
     fullName: bottomMargin
     langs:
@@ -71,11 +71,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.centerHorizontally
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#centerHorizontally:member'
     summary: |-
       获取或设置工作表的中心水平标记。 此标记确定在打印时是否水平居中工作表。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHorizontally
     fullName: centerHorizontally
     langs:
@@ -86,11 +86,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.centerVertically
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#centerVertically:member'
     summary: |-
       获取或设置工作表的中心垂直标记。 此标记确定在打印时是否垂直居中工作表。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerVertically
     fullName: centerVertically
     langs:
@@ -101,11 +101,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.draftMode
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#draftMode:member'
     summary: |-
       获取或设置工作表的草稿模式选项。 如果为 True，则将打印没有图形的工作表。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: draftMode
     fullName: draftMode
     langs:
@@ -116,11 +116,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.firstPageNumber
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#firstPageNumber:member'
     summary: |-
       获取或设置要打印的工作表的首页页码。 Null 值表示“自动”页码编号。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: firstPageNumber
     fullName: firstPageNumber
     langs:
@@ -131,11 +131,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.footerMargin
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#footerMargin:member'
     summary: |-
       获取或设置在打印时使用的工作表的页脚边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: footerMargin
     fullName: footerMargin
     langs:
@@ -146,11 +146,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.headerMargin
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#headerMargin:member'
     summary: |-
       获取或设置在打印时使用的工作表的页眉边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: headerMargin
     fullName: headerMargin
     langs:
@@ -161,11 +161,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.headersFooters
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#headersFooters:member'
     summary: |-
       工作表的页眉和页脚配置。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: headersFooters
     fullName: headersFooters
     langs:
@@ -175,12 +175,12 @@ items:
       content: 'headersFooters?: Excel.Interfaces.HeaderFooterGroupLoadOptions;'
       return:
         type:
-          - excel.Excel.Interfaces.HeaderFooterGroupLoadOptions
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.leftMargin
+          - 'excel!Excel.Interfaces.HeaderFooterGroupLoadOptions:interface'
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#leftMargin:member'
     summary: |-
       获取或设置在打印时使用的工作表的左边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftMargin
     fullName: leftMargin
     langs:
@@ -191,11 +191,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.orientation
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#orientation:member'
     summary: |-
       获取或设置工作表的页面方向。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: orientation
     fullName: orientation
     langs:
@@ -206,11 +206,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.paperSize
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#paperSize:member'
     summary: |-
       获取或设置工作表的页面纸张大小。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: paperSize
     fullName: paperSize
     langs:
@@ -221,11 +221,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.printComments
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#printComments:member'
     summary: |-
       获取或设置在打印时是否应该显示工作表的批注。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: printComments
     fullName: printComments
     langs:
@@ -236,11 +236,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.printErrors
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#printErrors:member'
     summary: |-
       获取或设置工作表的打印错误选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: printErrors
     fullName: printErrors
     langs:
@@ -251,11 +251,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.printGridlines
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#printGridlines:member'
     summary: |-
       获取或设置工作表的打印网格线标记。 此标记确定是否打印网格线。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: printGridlines
     fullName: printGridlines
     langs:
@@ -266,11 +266,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.printHeadings
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#printHeadings:member'
     summary: |-
       获取或设置工作表的打印标题标记。 此标记确定是否打印标题。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: printHeadings
     fullName: printHeadings
     langs:
@@ -281,11 +281,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.printOrder
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#printOrder:member'
     summary: |-
       获取或设置工作表的页面打印顺序选项。 它指定用于处理打印页码的顺序。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: printOrder
     fullName: printOrder
     langs:
@@ -296,11 +296,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.rightMargin
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#rightMargin:member'
     summary: |-
       获取或设置在打印时使用的工作表的右边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightMargin
     fullName: rightMargin
     langs:
@@ -311,11 +311,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.topMargin
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#topMargin:member'
     summary: |-
       获取或设置在打印时使用的工作表的上边距（以磅为单位）。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: topMargin
     fullName: topMargin
     langs:
@@ -326,11 +326,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.PageLayoutLoadOptions.zoom
+  - uid: 'excel!Excel.Interfaces.PageLayoutLoadOptions#zoom:member'
     summary: |-
       获取或设置工作表的打印缩放选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: zoom
     fullName: zoom
     langs:
@@ -341,3 +341,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.HeaderFooterGroupLoadOptions:interface'
+    name: Excel.Interfaces.HeaderFooterGroupLoadOptions
