--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkdata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.floatinginkdata.yml
@@ -1,21 +1,21 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.FloatingInkData
-    summary: 描述通过调用 "floatingInk ()" 返回的数据的接口。
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData:interface'
+    summary: 描述通过调用 "floatingInk （）" 返回的数据的接口。
     name: OneNote.Interfaces.FloatingInkData
     fullName: OneNote.Interfaces.FloatingInkData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.FloatingInkData.id
-      - onenote.OneNote.Interfaces.FloatingInkData.inkStrokes
-  - uid: onenote.OneNote.Interfaces.FloatingInkData.id
+      - 'onenote!OneNote.Interfaces.FloatingInkData#id:member'
+      - 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes:member'
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#id:member'
     summary: |-
       获取 FloatingInk 对象的 ID。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -26,11 +26,11 @@ items:
       return:
         type:
           - string
-  - uid: onenote.OneNote.Interfaces.FloatingInkData.inkStrokes
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes:member'
     summary: |-
       获取 FloatingInk 对象的笔划。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: inkStrokes
     fullName: inkStrokes
     langs:
@@ -40,4 +40,14 @@ items:
       content: 'inkStrokes?: OneNote.Interfaces.InkStrokeData[];'
       return:
         type:
-          - 'OneNote.Interfaces.InkStrokeData[]'
+          - 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.FloatingInkData#inkStrokes~0:complex'
+    name: 'OneNote.Interfaces.InkStrokeData[]'
+    fullName: 'OneNote.Interfaces.InkStrokeData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.InkStrokeData:interface'
+        name: OneNote.Interfaces.InkStrokeData
+        fullName: OneNote.Interfaces.InkStrokeData
+      - name: '[]'
+        fullName: '[]'
