--- a/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
+++ b/docs/docs-ref-autogen/outlook/outlook/office.mailboxenums.month.yml
@@ -1,31 +1,31 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: outlook.Office.MailboxEnums.Month
+  - uid: 'outlook!Office.MailboxEnums.Month:enum'
     summary: |-
       指定月。
 
-      \[[API 集: 邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
-    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**: 撰写或阅读'
+      \[[API 集：邮箱 1.7](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    remarks: '**[适用的 Outlook 模式](https://docs.microsoft.com/outlook/add-ins/#extension-points)<!-- -->**：撰写或阅读'
     name: Office.MailboxEnums.Month
     fullName: Office.MailboxEnums.Month
     langs:
       - typeScript
     type: enum
-    package: outlook
+    package: outlook!
     children:
-      - outlook.Office.MailboxEnums.Month.Apr
-      - outlook.Office.MailboxEnums.Month.Aug
-      - outlook.Office.MailboxEnums.Month.Dec
-      - outlook.Office.MailboxEnums.Month.Feb
-      - outlook.Office.MailboxEnums.Month.Jan
-      - outlook.Office.MailboxEnums.Month.Jul
-      - outlook.Office.MailboxEnums.Month.Jun
-      - outlook.Office.MailboxEnums.Month.Mar
-      - outlook.Office.MailboxEnums.Month.May
-      - outlook.Office.MailboxEnums.Month.Nov
-      - outlook.Office.MailboxEnums.Month.Oct
-      - outlook.Office.MailboxEnums.Month.Sep
-  - uid: outlook.Office.MailboxEnums.Month.Apr
+      - 'outlook!Office.MailboxEnums.Month.Apr:member'
+      - 'outlook!Office.MailboxEnums.Month.Aug:member'
+      - 'outlook!Office.MailboxEnums.Month.Dec:member'
+      - 'outlook!Office.MailboxEnums.Month.Feb:member'
+      - 'outlook!Office.MailboxEnums.Month.Jan:member'
+      - 'outlook!Office.MailboxEnums.Month.Jul:member'
+      - 'outlook!Office.MailboxEnums.Month.Jun:member'
+      - 'outlook!Office.MailboxEnums.Month.Mar:member'
+      - 'outlook!Office.MailboxEnums.Month.May:member'
+      - 'outlook!Office.MailboxEnums.Month.Nov:member'
+      - 'outlook!Office.MailboxEnums.Month.Oct:member'
+      - 'outlook!Office.MailboxEnums.Month.Sep:member'
+  - uid: 'outlook!Office.MailboxEnums.Month.Apr:member'
     summary: 年4月
     name: Apr
     fullName: Apr
@@ -33,7 +33,7 @@ items:
       - typeScript
     type: field
     numericValue: '"apr"'
-  - uid: outlook.Office.MailboxEnums.Month.Aug
+  - uid: 'outlook!Office.MailboxEnums.Month.Aug:member'
     summary: 年8月
     name: Aug
     fullName: Aug
@@ -41,7 +41,7 @@ items:
       - typeScript
     type: field
     numericValue: '"aug"'
-  - uid: outlook.Office.MailboxEnums.Month.Dec
+  - uid: 'outlook!Office.MailboxEnums.Month.Dec:member'
     summary: '12'
     name: Dec
     fullName: Dec
@@ -49,7 +49,7 @@ items:
       - typeScript
     type: field
     numericValue: '"dec"'
-  - uid: outlook.Office.MailboxEnums.Month.Feb
+  - uid: 'outlook!Office.MailboxEnums.Month.Feb:member'
     summary: '2'
     name: Feb
     fullName: Feb
@@ -57,7 +57,7 @@ items:
       - typeScript
     type: field
     numericValue: '"feb"'
-  - uid: outlook.Office.MailboxEnums.Month.Jan
+  - uid: 'outlook!Office.MailboxEnums.Month.Jan:member'
     summary: 年1月
     name: Jan
     fullName: Jan
@@ -65,7 +65,7 @@ items:
       - typeScript
     type: field
     numericValue: '"jan"'
-  - uid: outlook.Office.MailboxEnums.Month.Jul
+  - uid: 'outlook!Office.MailboxEnums.Month.Jul:member'
     summary: 年7月
     name: Jul
     fullName: Jul
@@ -73,7 +73,7 @@ items:
       - typeScript
     type: field
     numericValue: '"jul"'
-  - uid: outlook.Office.MailboxEnums.Month.Jun
+  - uid: 'outlook!Office.MailboxEnums.Month.Jun:member'
     summary: '7'
     name: Jun
     fullName: Jun
@@ -81,7 +81,7 @@ items:
       - typeScript
     type: field
     numericValue: '"jun"'
-  - uid: outlook.Office.MailboxEnums.Month.Mar
+  - uid: 'outlook!Office.MailboxEnums.Month.Mar:member'
     summary: '31'
     name: Mar
     fullName: Mar
@@ -89,7 +89,7 @@ items:
       - typeScript
     type: field
     numericValue: '"mar"'
-  - uid: outlook.Office.MailboxEnums.Month.May
+  - uid: 'outlook!Office.MailboxEnums.Month.May:member'
     summary: 有时
     name: May
     fullName: May
@@ -97,7 +97,7 @@ items:
       - typeScript
     type: field
     numericValue: '"may"'
-  - uid: outlook.Office.MailboxEnums.Month.Nov
+  - uid: 'outlook!Office.MailboxEnums.Month.Nov:member'
     summary: '2007'
     name: Nov
     fullName: Nov
@@ -105,7 +105,7 @@ items:
       - typeScript
     type: field
     numericValue: '"nov"'
-  - uid: outlook.Office.MailboxEnums.Month.Oct
+  - uid: 'outlook!Office.MailboxEnums.Month.Oct:member'
     summary: 年
     name: Oct
     fullName: Oct
@@ -113,7 +113,7 @@ items:
       - typeScript
     type: field
     numericValue: '"oct"'
-  - uid: outlook.Office.MailboxEnums.Month.Sep
+  - uid: 'outlook!Office.MailboxEnums.Month.Sep:member'
     summary: 月份
     name: Sep
     fullName: Sep
