--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartboxwhiskeroptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartboxwhiskeroptions.yml
@@ -1,32 +1,32 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartBoxwhiskerOptions
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions:class'
     summary: |-
       表示 "box" 和 "图" 图的属性。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartBoxwhiskerOptions
     fullName: Excel.ChartBoxwhiskerOptions
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.ChartBoxwhiskerOptions.context
-      - excel.Excel.ChartBoxwhiskerOptions.load
-      - excel.Excel.ChartBoxwhiskerOptions.load_1
-      - excel.Excel.ChartBoxwhiskerOptions.load_2
-      - excel.Excel.ChartBoxwhiskerOptions.quartileCalculation
-      - excel.Excel.ChartBoxwhiskerOptions.set
-      - excel.Excel.ChartBoxwhiskerOptions.set_1
-      - excel.Excel.ChartBoxwhiskerOptions.showInnerPoints
-      - excel.Excel.ChartBoxwhiskerOptions.showMeanLine
-      - excel.Excel.ChartBoxwhiskerOptions.showMeanMarker
-      - excel.Excel.ChartBoxwhiskerOptions.showOutlierPoints
-      - excel.Excel.ChartBoxwhiskerOptions.toJSON
-  - uid: excel.Excel.ChartBoxwhiskerOptions.context
+      - 'excel!Excel.ChartBoxwhiskerOptions#context:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#load:member(1)'
+      - 'excel!Excel.ChartBoxwhiskerOptions#load:member(2)'
+      - 'excel!Excel.ChartBoxwhiskerOptions#load:member(3)'
+      - 'excel!Excel.ChartBoxwhiskerOptions#quartileCalculation:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#set:member(1)'
+      - 'excel!Excel.ChartBoxwhiskerOptions#set:member(2)'
+      - 'excel!Excel.ChartBoxwhiskerOptions#showInnerPoints:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#showMeanLine:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#showMeanMarker:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#showOutlierPoints:member'
+      - 'excel!Excel.ChartBoxwhiskerOptions#toJSON:member(1)'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -37,17 +37,17 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.ChartBoxwhiskerOptions.load
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ChartBoxwhiskerOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ChartBoxwhiskerOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ChartBoxwhiskerOptions`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ChartBoxwhiskerOptions`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartBoxwhiskerOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartBoxwhiskerOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -57,15 +57,15 @@ items:
       content: 'load(option?: Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions): Excel.ChartBoxwhiskerOptions;'
       return:
         type:
-          - excel.Excel.ChartBoxwhiskerOptions
+          - 'excel!Excel.ChartBoxwhiskerOptions:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions
-  - uid: excel.Excel.ChartBoxwhiskerOptions.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions:interface'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -75,15 +75,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.ChartBoxwhiskerOptions;'
       return:
         type:
-          - excel.Excel.ChartBoxwhiskerOptions
+          - 'excel!Excel.ChartBoxwhiskerOptions:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.ChartBoxwhiskerOptions.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -93,18 +93,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartBoxwhiskerOptions;'
       return:
         type:
-          - excel.Excel.ChartBoxwhiskerOptions
+          - 'excel!Excel.ChartBoxwhiskerOptions:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.ChartBoxwhiskerOptions.quartileCalculation
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#quartileCalculation:member'
     summary: |-
       返回或设置箱形图的四分位点计算类型。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: quartileCalculation
     fullName: quartileCalculation
     langs:
@@ -114,11 +114,11 @@ items:
       content: 'quartileCalculation: Excel.ChartBoxQuartileCalculation | "Inclusive" | "Exclusive";'
       return:
         type:
-          - Excel.ChartBoxQuartileCalculation | "Inclusive" | "Exclusive"
-  - uid: excel.Excel.ChartBoxwhiskerOptions.set
+          - 'excel!Excel.ChartBoxwhiskerOptions#quartileCalculation~0:complex'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartBoxwhiskerOptions): void`
     name: 'set(properties, options)'
@@ -134,14 +134,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.ChartBoxwhiskerOptionsUpdateData
+            - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.ChartBoxwhiskerOptions.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -158,12 +158,12 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.ChartBoxwhiskerOptions
-  - uid: excel.Excel.ChartBoxwhiskerOptions.showInnerPoints
+            - 'excel!Excel.ChartBoxwhiskerOptions:class'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#showInnerPoints:member'
     summary: |-
       指定在箱形图中是否显示内部点。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showInnerPoints
     fullName: showInnerPoints
     langs:
@@ -174,11 +174,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBoxwhiskerOptions.showMeanLine
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#showMeanLine:member'
     summary: |-
       指定在箱形图中是否显示中线。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanLine
     fullName: showMeanLine
     langs:
@@ -189,11 +189,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBoxwhiskerOptions.showMeanMarker
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#showMeanMarker:member'
     summary: |-
       指定在箱形图中是否显示平均值标记。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanMarker
     fullName: showMeanMarker
     langs:
@@ -204,11 +204,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBoxwhiskerOptions.showOutlierPoints
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#showOutlierPoints:member'
     summary: |-
       指定在箱形图中是否显示离群值点。 读/写。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showOutlierPoints
     fullName: showOutlierPoints
     langs:
@@ -219,8 +219,8 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartBoxwhiskerOptions.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBoxwhiskerOptions 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ChartBoxwhiskerOptionsData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartBoxwhiskerOptions 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartBoxwhiskerOptionsData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -230,5 +230,29 @@ items:
       content: 'toJSON(): Excel.Interfaces.ChartBoxwhiskerOptionsData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartBoxwhiskerOptionsData
+          - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsData:interface'
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions:class'
+    name: Excel.ChartBoxwhiskerOptions
+  - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions:interface'
+    name: Excel.Interfaces.ChartBoxwhiskerOptionsLoadOptions
+  - uid: 'excel!Excel.ChartBoxwhiskerOptions#quartileCalculation~0:complex'
+    name: Excel.ChartBoxQuartileCalculation | "Inclusive" | "Exclusive"
+    fullName: Excel.ChartBoxQuartileCalculation | "Inclusive" | "Exclusive"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartBoxQuartileCalculation:enum'
+        name: Excel.ChartBoxQuartileCalculation
+        fullName: Excel.ChartBoxQuartileCalculation
+      - name: ' | "Inclusive" | "Exclusive"'
+        fullName: ' | "Inclusive" | "Exclusive"'
+  - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData:interface'
+    name: Interfaces.ChartBoxwhiskerOptionsUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsData:interface'
+    name: Excel.Interfaces.ChartBoxwhiskerOptionsData
