--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.headerfooter.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.headerfooter.yml
@@ -1,34 +1,34 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.HeaderFooter
-    summary: '\[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
+  - uid: 'excel!Excel.HeaderFooter:class'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.HeaderFooter
     fullName: Excel.HeaderFooter
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.HeaderFooter.centerFooter
-      - excel.Excel.HeaderFooter.centerHeader
-      - excel.Excel.HeaderFooter.context
-      - excel.Excel.HeaderFooter.leftFooter
-      - excel.Excel.HeaderFooter.leftHeader
-      - excel.Excel.HeaderFooter.load
-      - excel.Excel.HeaderFooter.load_1
-      - excel.Excel.HeaderFooter.load_2
-      - excel.Excel.HeaderFooter.rightFooter
-      - excel.Excel.HeaderFooter.rightHeader
-      - excel.Excel.HeaderFooter.set
-      - excel.Excel.HeaderFooter.set_1
-      - excel.Excel.HeaderFooter.toJSON
-  - uid: excel.Excel.HeaderFooter.centerFooter
+      - 'excel!Excel.HeaderFooter#centerFooter:member'
+      - 'excel!Excel.HeaderFooter#centerHeader:member'
+      - 'excel!Excel.HeaderFooter#context:member'
+      - 'excel!Excel.HeaderFooter#leftFooter:member'
+      - 'excel!Excel.HeaderFooter#leftHeader:member'
+      - 'excel!Excel.HeaderFooter#load:member(1)'
+      - 'excel!Excel.HeaderFooter#load:member(2)'
+      - 'excel!Excel.HeaderFooter#load:member(3)'
+      - 'excel!Excel.HeaderFooter#rightFooter:member'
+      - 'excel!Excel.HeaderFooter#rightHeader:member'
+      - 'excel!Excel.HeaderFooter#set:member(1)'
+      - 'excel!Excel.HeaderFooter#set:member(2)'
+      - 'excel!Excel.HeaderFooter#toJSON:member(1)'
+  - uid: 'excel!Excel.HeaderFooter#centerFooter:member'
     summary: |-
-      获取或设置工作表的中心页脚。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
     fullName: centerFooter
     langs:
@@ -39,11 +39,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.centerHeader
+  - uid: 'excel!Excel.HeaderFooter#centerHeader:member'
     summary: |-
-      获取或设置工作表的中心页眉。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的中心页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
     fullName: centerHeader
     langs:
@@ -54,7 +54,7 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.context
+  - uid: 'excel!Excel.HeaderFooter#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -65,12 +65,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.HeaderFooter.leftFooter
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.HeaderFooter#leftFooter:member'
     summary: |-
-      获取或设置工作表的左侧页脚。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的左侧页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
     fullName: leftFooter
     langs:
@@ -81,11 +81,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.leftHeader
+  - uid: 'excel!Excel.HeaderFooter#leftHeader:member'
     summary: |-
-      获取或设置工作表的左侧页眉。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的左侧页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
     fullName: leftHeader
     langs:
@@ -96,16 +96,16 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.load
+  - uid: 'excel!Excel.HeaderFooter#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.HeaderFooter`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.HeaderFooter`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.HeaderFooter`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.HeaderFooter`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.HeaderFooter`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.HeaderFooter`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -115,15 +115,15 @@ items:
       content: 'load(option?: Excel.Interfaces.HeaderFooterLoadOptions): Excel.HeaderFooter;'
       return:
         type:
-          - excel.Excel.HeaderFooter
+          - 'excel!Excel.HeaderFooter:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.HeaderFooterLoadOptions
-  - uid: excel.Excel.HeaderFooter.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.HeaderFooterLoadOptions:interface'
+  - uid: 'excel!Excel.HeaderFooter#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -133,15 +133,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.HeaderFooter;'
       return:
         type:
-          - excel.Excel.HeaderFooter
+          - 'excel!Excel.HeaderFooter:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.HeaderFooter.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.HeaderFooter#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -151,18 +151,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.HeaderFooter;'
       return:
         type:
-          - excel.Excel.HeaderFooter
+          - 'excel!Excel.HeaderFooter:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.HeaderFooter.rightFooter
+  - uid: 'excel!Excel.HeaderFooter#rightFooter:member'
     summary: |-
-      获取或设置工作表的右侧页脚。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的右侧页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
     fullName: rightFooter
     langs:
@@ -173,11 +173,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.rightHeader
+  - uid: 'excel!Excel.HeaderFooter#rightHeader:member'
     summary: |-
-      获取或设置工作表的右侧页眉。 若要应用字体格式或插入变量值, 请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码:。
+      获取或设置工作表的右侧页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/en-us/library/bb225426.aspx代码：。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
     fullName: rightHeader
     langs:
@@ -188,10 +188,10 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.HeaderFooter.set
+  - uid: 'excel!Excel.HeaderFooter#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.HeaderFooter): void`
     name: 'set(properties, options)'
@@ -207,14 +207,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.HeaderFooterUpdateData
+            - 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.HeaderFooter.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.HeaderFooter#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -231,9 +231,9 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.HeaderFooter
-  - uid: excel.Excel.HeaderFooter.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.HeaderFooterData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+            - 'excel!Excel.HeaderFooter:class'
+  - uid: 'excel!Excel.HeaderFooter#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.HeaderFooterData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -243,5 +243,20 @@ items:
       content: 'toJSON(): Excel.Interfaces.HeaderFooterData;'
       return:
         type:
-          - excel.Excel.Interfaces.HeaderFooterData
+          - 'excel!Excel.Interfaces.HeaderFooterData:interface'
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.HeaderFooter:class'
+    name: Excel.HeaderFooter
+  - uid: 'excel!Excel.Interfaces.HeaderFooterLoadOptions:interface'
+    name: Excel.Interfaces.HeaderFooterLoadOptions
+  - uid: 'excel!Excel.Interfaces.HeaderFooterUpdateData:interface'
+    name: Interfaces.HeaderFooterUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.HeaderFooterData:interface'
+    name: Excel.Interfaces.HeaderFooterData
