--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsupdatedata.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData
-    summary: '一个用于更新 ChartErrorBars 对象上的数据的接口, 可用于 "chartErrorBars (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData:interface'
+    summary: '一个用于更新 ChartErrorBars 对象上的数据的接口，可用于 "chartErrorBars （<!-- -->{ ... }<!-- -->)".'
     name: Excel.Interfaces.ChartErrorBarsUpdateData
     fullName: Excel.Interfaces.ChartErrorBarsUpdateData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartErrorBarsUpdateData.endStyleCap
-      - excel.Excel.Interfaces.ChartErrorBarsUpdateData.format
-      - excel.Excel.Interfaces.ChartErrorBarsUpdateData.include
-      - excel.Excel.Interfaces.ChartErrorBarsUpdateData.type
-      - excel.Excel.Interfaces.ChartErrorBarsUpdateData.visible
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData.endStyleCap
+      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member'
+      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member'
+      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member'
+      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member'
+      - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#endStyleCap:member'
     summary: |-
       指定误差线是否具有终止端样式。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endStyleCap
     fullName: endStyleCap
     langs:
@@ -29,11 +29,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData.format
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#format:member'
     summary: |-
       指定误差线的格式类型。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -43,12 +43,12 @@ items:
       content: 'format?: Excel.Interfaces.ChartErrorBarsFormatUpdateData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartErrorBarsFormatUpdateData
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData.include
+          - 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include:member'
     summary: |-
       指定包含误差线的哪些部分。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: include
     fullName: include
     langs:
@@ -58,12 +58,12 @@ items:
       content: 'include?: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues";'
       return:
         type:
-          - Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData.type
+          - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type:member'
     summary: |-
       误差线标记的区域类型。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -73,12 +73,12 @@ items:
       content: 'type?: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom";'
       return:
         type:
-          - Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
-  - uid: excel.Excel.Interfaces.ChartErrorBarsUpdateData.visible
+          - 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type~0:complex'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#visible:member'
     summary: |-
       指定是否显示误差线。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -89,3 +89,24 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
+    name: Excel.Interfaces.ChartErrorBarsFormatUpdateData
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#include~0:complex'
+    name: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
+    fullName: Excel.ChartErrorBarsInclude | "Both" | "MinusValues" | "PlusValues"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartErrorBarsInclude:enum'
+        name: Excel.ChartErrorBarsInclude
+        fullName: Excel.ChartErrorBarsInclude
+      - name: ' | "Both" | "MinusValues" | "PlusValues"'
+        fullName: ' | "Both" | "MinusValues" | "PlusValues"'
+  - uid: 'excel!Excel.Interfaces.ChartErrorBarsUpdateData#type~0:complex'
+    name: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
+    fullName: Excel.ChartErrorBarsType | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"
+    spec.typeScript:
+      - uid: 'excel!Excel.ChartErrorBarsType:enum'
+        name: Excel.ChartErrorBarsType
+        fullName: Excel.ChartErrorBarsType
+      - name: ' | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"'
+        fullName: ' | "FixedValue" | "Percent" | "StDev" | "StError" | "Custom"'
