--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartpivotoptionsloadoptions.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
     summary: |-
       封装数据透视图的选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartPivotOptionsLoadOptions
     fullName: Excel.Interfaces.ChartPivotOptionsLoadOptions
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.$all
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showAxisFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showLegendFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showReportFilterFieldButtons
-      - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showValueFieldButtons
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.$all
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
+      - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showAxisFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showAxisFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAxisFieldButtons
     fullName: showAxisFieldButtons
     langs:
@@ -43,11 +43,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showLegendFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showLegendFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示图例字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendFieldButtons
     fullName: showLegendFieldButtons
     langs:
@@ -58,11 +58,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showReportFilterFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showReportFilterFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示报表筛选字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showReportFilterFieldButtons
     fullName: showReportFilterFieldButtons
     langs:
@@ -73,11 +73,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.Interfaces.ChartPivotOptionsLoadOptions.showValueFieldButtons
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions#showValueFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示值字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValueFieldButtons
     fullName: showValueFieldButtons
     langs:
