--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.workbookcreateddata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.workbookcreateddata.yml
@@ -1,10 +1,10 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.WorkbookCreatedData
-    summary: 描述通过调用 "workbookCreated ()" 返回的数据的接口。
+  - uid: 'excel!Excel.Interfaces.WorkbookCreatedData:interface'
+    summary: 描述通过调用 "workbookCreated （）" 返回的数据的接口。
     name: Excel.Interfaces.WorkbookCreatedData
     fullName: Excel.Interfaces.WorkbookCreatedData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
