--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.removeduplicatesresult.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.removeduplicatesresult.yml
@@ -1,27 +1,27 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.RemoveDuplicatesResult
+  - uid: 'excel!Excel.RemoveDuplicatesResult:class'
     summary: |-
       代表区域中的 removeDuplicates 方法的结果
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.RemoveDuplicatesResult
     fullName: Excel.RemoveDuplicatesResult
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.RemoveDuplicatesResult.context
-      - excel.Excel.RemoveDuplicatesResult.load
-      - excel.Excel.RemoveDuplicatesResult.load_1
-      - excel.Excel.RemoveDuplicatesResult.load_2
-      - excel.Excel.RemoveDuplicatesResult.removed
-      - excel.Excel.RemoveDuplicatesResult.toJSON
-      - excel.Excel.RemoveDuplicatesResult.uniqueRemaining
-  - uid: excel.Excel.RemoveDuplicatesResult.context
+      - 'excel!Excel.RemoveDuplicatesResult#context:member'
+      - 'excel!Excel.RemoveDuplicatesResult#load:member(1)'
+      - 'excel!Excel.RemoveDuplicatesResult#load:member(2)'
+      - 'excel!Excel.RemoveDuplicatesResult#load:member(3)'
+      - 'excel!Excel.RemoveDuplicatesResult#removed:member'
+      - 'excel!Excel.RemoveDuplicatesResult#toJSON:member(1)'
+      - 'excel!Excel.RemoveDuplicatesResult#uniqueRemaining:member'
+  - uid: 'excel!Excel.RemoveDuplicatesResult#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -32,17 +32,17 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.RemoveDuplicatesResult.load
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.RemoveDuplicatesResult#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.RemoveDuplicatesResult`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.RemoveDuplicatesResult`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -52,15 +52,15 @@ items:
       content: 'load(option?: Excel.Interfaces.RemoveDuplicatesResultLoadOptions): Excel.RemoveDuplicatesResult;'
       return:
         type:
-          - excel.Excel.RemoveDuplicatesResult
+          - 'excel!Excel.RemoveDuplicatesResult:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.RemoveDuplicatesResultLoadOptions
-  - uid: excel.Excel.RemoveDuplicatesResult.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.RemoveDuplicatesResultLoadOptions:interface'
+  - uid: 'excel!Excel.RemoveDuplicatesResult#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -70,15 +70,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.RemoveDuplicatesResult;'
       return:
         type:
-          - excel.Excel.RemoveDuplicatesResult
+          - 'excel!Excel.RemoveDuplicatesResult:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.RemoveDuplicatesResult.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.RemoveDuplicatesResult#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -88,18 +88,18 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult;'
       return:
         type:
-          - excel.Excel.RemoveDuplicatesResult
+          - 'excel!Excel.RemoveDuplicatesResult:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.RemoveDuplicatesResult.removed
+  - uid: 'excel!Excel.RemoveDuplicatesResult#removed:member'
     summary: |-
       由操作删除的重复行数。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: removed
     fullName: removed
     langs:
@@ -110,8 +110,8 @@ items:
       return:
         type:
           - number
-  - uid: excel.Excel.RemoveDuplicatesResult.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 RemoveDuplicatesResult 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.RemoveDuplicatesResultData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+  - uid: 'excel!Excel.RemoveDuplicatesResult#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 RemoveDuplicatesResult 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.RemoveDuplicatesResultData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -121,13 +121,13 @@ items:
       content: 'toJSON(): Excel.Interfaces.RemoveDuplicatesResultData;'
       return:
         type:
-          - excel.Excel.Interfaces.RemoveDuplicatesResultData
+          - 'excel!Excel.Interfaces.RemoveDuplicatesResultData:interface'
         description: ''
-  - uid: excel.Excel.RemoveDuplicatesResult.uniqueRemaining
+  - uid: 'excel!Excel.RemoveDuplicatesResult#uniqueRemaining:member'
     summary: |-
       所生成的区域中存在的剩余唯一行数。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: uniqueRemaining
     fullName: uniqueRemaining
     langs:
@@ -156,3 +156,14 @@ items:
               console.log(deleteResult.uniqueRemaining + " entries with unique names remain in the range.");
           });
           ```
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.RemoveDuplicatesResult:class'
+    name: Excel.RemoveDuplicatesResult
+  - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultLoadOptions:interface'
+    name: Excel.Interfaces.RemoveDuplicatesResultLoadOptions
+  - uid: 'excel!Excel.Interfaces.RemoveDuplicatesResultData:interface'
+    name: Excel.Interfaces.RemoveDuplicatesResultData
