--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecellproperties.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.settablecellproperties.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.SettableCellProperties
+  - uid: 'excel!Excel.SettableCellProperties:interface'
     summary: |-
       表示 setCellProperties 的输入参数。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.SettableCellProperties
     fullName: Excel.SettableCellProperties
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.SettableCellProperties.format
-      - excel.Excel.SettableCellProperties.hyperlink
-      - excel.Excel.SettableCellProperties.style
-  - uid: excel.Excel.SettableCellProperties.format
+      - 'excel!Excel.SettableCellProperties#format:member'
+      - 'excel!Excel.SettableCellProperties#hyperlink:member'
+      - 'excel!Excel.SettableCellProperties#style:member'
+  - uid: 'excel!Excel.SettableCellProperties#format:member'
     summary: |-
       表示`format`属性。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -29,12 +29,12 @@ items:
       content: 'format?: Excel.CellPropertiesFormat;'
       return:
         type:
-          - excel.Excel.CellPropertiesFormat
-  - uid: excel.Excel.SettableCellProperties.hyperlink
+          - 'excel!Excel.CellPropertiesFormat:interface'
+  - uid: 'excel!Excel.SettableCellProperties#hyperlink:member'
     summary: |-
       表示`hyperlink`属性。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hyperlink
     fullName: hyperlink
     langs:
@@ -44,12 +44,12 @@ items:
       content: 'hyperlink?: Excel.RangeHyperlink;'
       return:
         type:
-          - excel.Excel.RangeHyperlink
-  - uid: excel.Excel.SettableCellProperties.style
+          - 'excel!Excel.RangeHyperlink:interface'
+  - uid: 'excel!Excel.SettableCellProperties#style:member'
     summary: |-
       表示`style`属性。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -137,3 +137,8 @@ items:
               await context.sync();
           });
           ```
+references:
+  - uid: 'excel!Excel.CellPropertiesFormat:interface'
+    name: Excel.CellPropertiesFormat
+  - uid: 'excel!Excel.RangeHyperlink:interface'
+    name: Excel.RangeHyperlink
