--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelinestyle.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapelinestyle.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ShapeLineStyle
+  - uid: 'excel!Excel.ShapeLineStyle:enum'
     summary: |-
       线条的样式。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeLineStyle
     fullName: Excel.ShapeLineStyle
     langs:
       - typeScript
     type: enum
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.ShapeLineStyle.single
-      - excel.Excel.ShapeLineStyle.thickBetweenThin
-      - excel.Excel.ShapeLineStyle.thickThin
-      - excel.Excel.ShapeLineStyle.thinThick
-      - excel.Excel.ShapeLineStyle.thinThin
-  - uid: excel.Excel.ShapeLineStyle.single
+      - 'excel!Excel.ShapeLineStyle.single:member'
+      - 'excel!Excel.ShapeLineStyle.thickBetweenThin:member'
+      - 'excel!Excel.ShapeLineStyle.thickThin:member'
+      - 'excel!Excel.ShapeLineStyle.thinThick:member'
+      - 'excel!Excel.ShapeLineStyle.thinThin:member'
+  - uid: 'excel!Excel.ShapeLineStyle.single:member'
     summary: 单线。
     name: single
     fullName: single
@@ -25,7 +25,7 @@ items:
       - typeScript
     type: field
     numericValue: '"Single"'
-  - uid: excel.Excel.ShapeLineStyle.thickBetweenThin
+  - uid: 'excel!Excel.ShapeLineStyle.thickBetweenThin:member'
     summary: 粗线每一侧各带一条细线。
     name: thickBetweenThin
     fullName: thickBetweenThin
@@ -33,23 +33,23 @@ items:
       - typeScript
     type: field
     numericValue: '"ThickBetweenThin"'
-  - uid: excel.Excel.ShapeLineStyle.thickThin
-    summary: '粗线位于细线旁边。 对于水平线, 粗线位于细线上方。 对于垂直线, 粗线位于细线的左侧。'
+  - uid: 'excel!Excel.ShapeLineStyle.thickThin:member'
+    summary: 粗线位于细线旁边。 对于水平线，粗线位于细线上方。 对于垂直线，粗线位于细线的左侧。
     name: thickThin
     fullName: thickThin
     langs:
       - typeScript
     type: field
     numericValue: '"ThickThin"'
-  - uid: excel.Excel.ShapeLineStyle.thinThick
-    summary: '粗线位于细线旁边。 对于水平线, 粗线位于细线下方。 对于垂直线条, 粗线位于细线的右侧。'
+  - uid: 'excel!Excel.ShapeLineStyle.thinThick:member'
+    summary: 粗线位于细线旁边。 对于水平线，粗线位于细线下方。 对于垂直线条，粗线位于细线的右侧。
     name: thinThick
     fullName: thinThick
     langs:
       - typeScript
     type: field
     numericValue: '"ThinThick"'
-  - uid: excel.Excel.ShapeLineStyle.thinThin
+  - uid: 'excel!Excel.ShapeLineStyle.thinThin:member'
     summary: 双细线。
     name: thinThin
     fullName: thinThin
