--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.tablescopedcollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.tablescopedcollection.yml
@@ -1,29 +1,29 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.TableScopedCollection
+  - uid: 'excel!Excel.TableScopedCollection:class'
     summary: |-
-      表示已确定范围的表的集合。 对于每个表, 其左上角都被认为是其定位点位置, 表按从上到下, 然后从左到右进行排序。
+      表示已确定范围的表的集合。 对于每个表，其左上角都被认为是其定位点位置，表按从上到下，然后从左到右进行排序。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.TableScopedCollection
     fullName: Excel.TableScopedCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.TableScopedCollection.context
-      - excel.Excel.TableScopedCollection.getCount
-      - excel.Excel.TableScopedCollection.getFirst
-      - excel.Excel.TableScopedCollection.getItem
-      - excel.Excel.TableScopedCollection.items
-      - excel.Excel.TableScopedCollection.load
-      - excel.Excel.TableScopedCollection.load_1
-      - excel.Excel.TableScopedCollection.load_2
-      - excel.Excel.TableScopedCollection.toJSON
-  - uid: excel.Excel.TableScopedCollection.context
+      - 'excel!Excel.TableScopedCollection#context:member'
+      - 'excel!Excel.TableScopedCollection#getCount:member(1)'
+      - 'excel!Excel.TableScopedCollection#getFirst:member(1)'
+      - 'excel!Excel.TableScopedCollection#getItem:member(1)'
+      - 'excel!Excel.TableScopedCollection#items:member'
+      - 'excel!Excel.TableScopedCollection#load:member(1)'
+      - 'excel!Excel.TableScopedCollection#load:member(2)'
+      - 'excel!Excel.TableScopedCollection#load:member(3)'
+      - 'excel!Excel.TableScopedCollection#toJSON:member(1)'
+  - uid: 'excel!Excel.TableScopedCollection#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -34,12 +34,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.TableScopedCollection.getCount
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.TableScopedCollection#getCount:member(1)'
     summary: |-
       获取集合中的表数量。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getCount()
     fullName: getCount()
     langs:
@@ -49,13 +49,13 @@ items:
       content: 'getCount(): OfficeExtension.ClientResult<number>;'
       return:
         type:
-          - OfficeExtension.ClientResult<number>
+          - 'excel!Excel.TableScopedCollection#getCount~0:complex'
         description: ''
-  - uid: excel.Excel.TableScopedCollection.getFirst
+  - uid: 'excel!Excel.TableScopedCollection#getFirst:member(1)'
     summary: |-
       获取集合中的第一个表格。 集合中的表格按照从上到下、从左到右的顺序排列，因此左上表格是集合中的第一个表格。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getFirst()
     fullName: getFirst()
     langs:
@@ -65,13 +65,13 @@ items:
       content: 'getFirst(): Excel.Table;'
       return:
         type:
-          - excel.Excel.Table
+          - 'excel!Excel.Table:class'
         description: ''
-  - uid: excel.Excel.TableScopedCollection.getItem
+  - uid: 'excel!Excel.TableScopedCollection#getItem:member(1)'
     summary: |-
       按名称或 ID 获取表。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getItem(key)
     fullName: getItem(key)
     langs:
@@ -81,14 +81,14 @@ items:
       content: 'getItem(key: string): Excel.Table;'
       return:
         type:
-          - excel.Excel.Table
+          - 'excel!Excel.Table:class'
         description: ''
       parameters:
         - id: key
           description: 要检索的表的名称或 ID。
           type:
             - string
-  - uid: excel.Excel.TableScopedCollection.items
+  - uid: 'excel!Excel.TableScopedCollection#items:member'
     summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
@@ -99,17 +99,17 @@ items:
       content: 'readonly items: Excel.Table[];'
       return:
         type:
-          - 'Excel.Table[]'
-  - uid: excel.Excel.TableScopedCollection.load
+          - 'excel!Excel.TableScopedCollection#items~0:complex'
+  - uid: 'excel!Excel.TableScopedCollection#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.TableScopedCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.TableScopedCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.TableScopedCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.TableScopedCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableScopedCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.TableScopedCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -119,15 +119,15 @@ items:
       content: 'load(option?: Excel.Interfaces.TableScopedCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions): Excel.TableScopedCollection;'
       return:
         type:
-          - excel.Excel.TableScopedCollection
+          - 'excel!Excel.TableScopedCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - Excel.Interfaces.TableScopedCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
-  - uid: excel.Excel.TableScopedCollection.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.TableScopedCollection#load~0:complex'
+  - uid: 'excel!Excel.TableScopedCollection#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -137,14 +137,14 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.TableScopedCollection;'
       return:
         type:
-          - excel.Excel.TableScopedCollection
+          - 'excel!Excel.TableScopedCollection:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.TableScopedCollection.load_2
+  - uid: 'excel!Excel.TableScopedCollection#load:member(3)'
     name: load(option)
     fullName: load(option)
     langs:
@@ -154,15 +154,15 @@ items:
       content: 'load(option?: OfficeExtension.LoadOption): Excel.TableScopedCollection;'
       return:
         type:
-          - excel.Excel.TableScopedCollection
+          - 'excel!Excel.TableScopedCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - OfficeExtension.LoadOption
-  - uid: excel.Excel.TableScopedCollection.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableScopedCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.TableScopedCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
+            - 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'excel!Excel.TableScopedCollection#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`Excel.TableScopedCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.TableScopedCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -172,5 +172,48 @@ items:
       content: 'toJSON(): Excel.Interfaces.TableScopedCollectionData;'
       return:
         type:
-          - excel.Excel.Interfaces.TableScopedCollectionData
+          - 'excel!Excel.Interfaces.TableScopedCollectionData:interface'
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.TableScopedCollection#getCount~0:complex'
+    name: OfficeExtension.ClientResult<number>
+    fullName: OfficeExtension.ClientResult<number>
+    spec.typeScript:
+      - uid: 'excel!OfficeExtension.ClientResult:class'
+        name: OfficeExtension.ClientResult
+        fullName: OfficeExtension.ClientResult
+      - name: <number>
+        fullName: <number>
+  - uid: 'excel!Excel.Table:class'
+    name: Excel.Table
+  - uid: 'excel!Excel.TableScopedCollection#items~0:complex'
+    name: 'Excel.Table[]'
+    fullName: 'Excel.Table[]'
+    spec.typeScript:
+      - uid: 'excel!Excel.Table:class'
+        name: Excel.Table
+        fullName: Excel.Table
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'excel!Excel.TableScopedCollection:class'
+    name: Excel.TableScopedCollection
+  - uid: 'excel!Excel.TableScopedCollection#load~0:complex'
+    name: Excel.Interfaces.TableScopedCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
+    fullName: Excel.Interfaces.TableScopedCollectionLoadOptions & Excel.Interfaces.CollectionLoadOptions
+    spec.typeScript:
+      - uid: 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions:interface'
+        name: Excel.Interfaces.TableScopedCollectionLoadOptions
+        fullName: Excel.Interfaces.TableScopedCollectionLoadOptions
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
+        name: Excel.Interfaces.CollectionLoadOptions
+        fullName: Excel.Interfaces.CollectionLoadOptions
+  - uid: 'excel!OfficeExtension.LoadOption:interface'
+    name: OfficeExtension.LoadOption
+  - uid: 'excel!Excel.Interfaces.TableScopedCollectionData:interface'
+    name: Excel.Interfaces.TableScopedCollectionData
