--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphcollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.paragraphcollectionupdatedata.yml
@@ -1,16 +1,16 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.ParagraphCollectionUpdateData
-    summary: '一个用于更新 ParagraphCollection 对象上的数据的接口, 可用于 "paragraphCollection (<!-- -->{ ... }<!-- -->)".'
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData:interface'
+    summary: '一个用于更新 ParagraphCollection 对象上的数据的接口，可用于 "paragraphCollection （<!-- -->{ ... }<!-- -->)".'
     name: OneNote.Interfaces.ParagraphCollectionUpdateData
     fullName: OneNote.Interfaces.ParagraphCollectionUpdateData
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.ParagraphCollectionUpdateData.items
-  - uid: onenote.OneNote.Interfaces.ParagraphCollectionUpdateData.items
+      - 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items:member'
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items:member'
     name: items
     fullName: items
     langs:
@@ -20,4 +20,14 @@ items:
       content: 'items?: OneNote.Interfaces.ParagraphData[];'
       return:
         type:
-          - 'OneNote.Interfaces.ParagraphData[]'
+          - 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items~0:complex'
+references:
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionUpdateData#items~0:complex'
+    name: 'OneNote.Interfaces.ParagraphData[]'
+    fullName: 'OneNote.Interfaces.ParagraphData[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.ParagraphData:interface'
+        name: OneNote.Interfaces.ParagraphData
+        fullName: OneNote.Interfaces.ParagraphData
+      - name: '[]'
+        fullName: '[]'
