--- a/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellloadoptions.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.interfaces.tablecellloadoptions.yml
@@ -1,25 +1,25 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions:interface'
     summary: |-
       表示 OneNote 表中的一个单元格。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.Interfaces.TableCellLoadOptions
     fullName: OneNote.Interfaces.TableCellLoadOptions
     langs:
       - typeScript
     type: interface
-    package: onenote
+    package: onenote!
     children:
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.$all
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.cellIndex
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.id
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.paragraphs
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.parentRow
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.rowIndex
-      - onenote.OneNote.Interfaces.TableCellLoadOptions.shadingColor
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.$all
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#$all:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#cellIndex:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#id:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#paragraphs:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#parentRow:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#rowIndex:member'
+      - 'onenote!OneNote.Interfaces.TableCellLoadOptions#shadingColor:member'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#$all:member'
     name: $all
     fullName: $all
     langs:
@@ -30,11 +30,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.cellIndex
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#cellIndex:member'
     summary: |-
       获取单元格行中的单元格索引。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: cellIndex
     fullName: cellIndex
     langs:
@@ -45,11 +45,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.id
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#id:member'
     summary: |-
       获取单元格的 ID。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: id
     fullName: id
     langs:
@@ -60,11 +60,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.paragraphs
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#paragraphs:member'
     summary: |-
       获取 TableCell 中 Paragraph 对象的集合。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: paragraphs
     fullName: paragraphs
     langs:
@@ -74,12 +74,12 @@ items:
       content: 'paragraphs?: OneNote.Interfaces.ParagraphCollectionLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.ParagraphCollectionLoadOptions
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.parentRow
+          - 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#parentRow:member'
     summary: |-
       获取单元格的父行。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: parentRow
     fullName: parentRow
     langs:
@@ -89,12 +89,12 @@ items:
       content: 'parentRow?: OneNote.Interfaces.TableRowLoadOptions;'
       return:
         type:
-          - onenote.OneNote.Interfaces.TableRowLoadOptions
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.rowIndex
+          - 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#rowIndex:member'
     summary: |-
       获取表中单元格行的索引。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: rowIndex
     fullName: rowIndex
     langs:
@@ -105,11 +105,11 @@ items:
       return:
         type:
           - boolean
-  - uid: onenote.OneNote.Interfaces.TableCellLoadOptions.shadingColor
+  - uid: 'onenote!OneNote.Interfaces.TableCellLoadOptions#shadingColor:member'
     summary: |-
       获取并设置单元格的底纹色
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: shadingColor
     fullName: shadingColor
     langs:
@@ -120,3 +120,8 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'onenote!OneNote.Interfaces.ParagraphCollectionLoadOptions:interface'
+    name: OneNote.Interfaces.ParagraphCollectionLoadOptions
+  - uid: 'onenote!OneNote.Interfaces.TableRowLoadOptions:interface'
+    name: OneNote.Interfaces.TableRowLoadOptions
