--- a/docs/docs-ref-autogen/onenote/onenote/onenote.tablecellcollection.yml
+++ b/docs/docs-ref-autogen/onenote/onenote/onenote.tablecellcollection.yml
@@ -1,31 +1,31 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: onenote.OneNote.TableCellCollection
+  - uid: 'onenote!OneNote.TableCellCollection:class'
     summary: |-
       包含 TableCell 对象的集合。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: OneNote.TableCellCollection
     fullName: OneNote.TableCellCollection
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: onenote
+      - 'onenote!OfficeExtension.ClientObject:class'
+    package: onenote!
     children:
-      - onenote.OneNote.TableCellCollection.context
-      - onenote.OneNote.TableCellCollection.count
-      - onenote.OneNote.TableCellCollection.getItem
-      - onenote.OneNote.TableCellCollection.getItemAt
-      - onenote.OneNote.TableCellCollection.items
-      - onenote.OneNote.TableCellCollection.load
-      - onenote.OneNote.TableCellCollection.load_1
-      - onenote.OneNote.TableCellCollection.load_2
-      - onenote.OneNote.TableCellCollection.toJSON
-      - onenote.OneNote.TableCellCollection.track
-      - onenote.OneNote.TableCellCollection.untrack
-  - uid: onenote.OneNote.TableCellCollection.context
+      - 'onenote!OneNote.TableCellCollection#context:member'
+      - 'onenote!OneNote.TableCellCollection#count:member'
+      - 'onenote!OneNote.TableCellCollection#getItem:member(1)'
+      - 'onenote!OneNote.TableCellCollection#getItemAt:member(1)'
+      - 'onenote!OneNote.TableCellCollection#items:member'
+      - 'onenote!OneNote.TableCellCollection#load:member(1)'
+      - 'onenote!OneNote.TableCellCollection#load:member(2)'
+      - 'onenote!OneNote.TableCellCollection#load:member(3)'
+      - 'onenote!OneNote.TableCellCollection#toJSON:member(1)'
+      - 'onenote!OneNote.TableCellCollection#track:member(1)'
+      - 'onenote!OneNote.TableCellCollection#untrack:member(1)'
+  - uid: 'onenote!OneNote.TableCellCollection#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -36,12 +36,12 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - onenote.OneNote.RequestContext
-  - uid: onenote.OneNote.TableCellCollection.count
+          - 'onenote!OneNote.RequestContext:class'
+  - uid: 'onenote!OneNote.TableCellCollection#count:member'
     summary: |-
       返回集合中的 tablecells 数。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: count
     fullName: count
     langs:
@@ -52,11 +52,11 @@ items:
       return:
         type:
           - number
-  - uid: onenote.OneNote.TableCellCollection.getItem
+  - uid: 'onenote!OneNote.TableCellCollection#getItem:member(1)'
     summary: |-
       按其在集合中的 ID 或索引获取 table cell 对象。 只读。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItem(index)
     fullName: getItem(index)
     langs:
@@ -66,18 +66,18 @@ items:
       content: 'getItem(index: number | string): OneNote.TableCell;'
       return:
         type:
-          - onenote.OneNote.TableCell
+          - 'onenote!OneNote.TableCell:class'
         description: ''
       parameters:
         - id: index
           description: 用于标识 table cell 对象的索引位置的数字。
           type:
             - number | string
-  - uid: onenote.OneNote.TableCellCollection.getItemAt
+  - uid: 'onenote!OneNote.TableCellCollection#getItemAt:member(1)'
     summary: |-
       根据其在集合中的位置获取 tablecell。
 
-      \[[API 集: OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
+      \[[API 集： OneNoteApi 1.1](/office/dev/add-ins/reference/requirement-sets/onenote-api-requirement-sets)\]
     name: getItemAt(index)
     fullName: getItemAt(index)
     langs:
@@ -87,14 +87,14 @@ items:
       content: 'getItemAt(index: number): OneNote.TableCell;'
       return:
         type:
-          - onenote.OneNote.TableCell
+          - 'onenote!OneNote.TableCell:class'
         description: ''
       parameters:
         - id: index
           description: 要检索的对象的索引值。 从零开始编制索引。
           type:
             - number
-  - uid: onenote.OneNote.TableCellCollection.items
+  - uid: 'onenote!OneNote.TableCellCollection#items:member'
     summary: 获取此集合中已加载的子项。
     name: items
     fullName: items
@@ -105,17 +105,17 @@ items:
       content: 'readonly items: OneNote.TableCell[];'
       return:
         type:
-          - 'OneNote.TableCell[]'
-  - uid: onenote.OneNote.TableCellCollection.load
+          - 'onenote!OneNote.TableCellCollection#items~0:complex'
+  - uid: 'onenote!OneNote.TableCellCollection#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): OneNote.TableCellCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): OneNote.TableCellCollection`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): OneNote.TableCellCollection`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): OneNote.TableCellCollection`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.TableCellCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): OneNote.TableCellCollection`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -125,15 +125,15 @@ items:
       content: 'load(option?: OneNote.Interfaces.TableCellCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions): OneNote.TableCellCollection;'
       return:
         type:
-          - onenote.OneNote.TableCellCollection
+          - 'onenote!OneNote.TableCellCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - OneNote.Interfaces.TableCellCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions
-  - uid: onenote.OneNote.TableCellCollection.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'onenote!OneNote.TableCellCollection#load~0:complex'
+  - uid: 'onenote!OneNote.TableCellCollection#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -143,14 +143,14 @@ items:
       content: 'load(propertyNames?: string | string[]): OneNote.TableCellCollection;'
       return:
         type:
-          - onenote.OneNote.TableCellCollection
+          - 'onenote!OneNote.TableCellCollection:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: onenote.OneNote.TableCellCollection.load_2
+  - uid: 'onenote!OneNote.TableCellCollection#load:member(3)'
     name: load(option)
     fullName: load(option)
     langs:
@@ -160,15 +160,15 @@ items:
       content: 'load(option?: OfficeExtension.LoadOption): OneNote.TableCellCollection;'
       return:
         type:
-          - onenote.OneNote.TableCellCollection
+          - 'onenote!OneNote.TableCellCollection:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - OfficeExtension.LoadOption
-  - uid: onenote.OneNote.TableCellCollection.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.TableCellCollection`对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`OneNote.Interfaces.TableCellCollectionData`<!-- -->), 其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。'
+            - 'onenote!OfficeExtension.LoadOption:interface'
+  - uid: 'onenote!OneNote.TableCellCollection#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始`OneNote.TableCellCollection`对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`OneNote.Interfaces.TableCellCollectionData`<!-- -->），其中包含集合的项中所有加载属性的浅表副本的 "items" 数组。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -178,9 +178,9 @@ items:
       content: 'toJSON(): OneNote.Interfaces.TableCellCollectionData;'
       return:
         type:
-          - onenote.OneNote.Interfaces.TableCellCollectionData
+          - 'onenote!OneNote.Interfaces.TableCellCollectionData:interface'
         description: ''
-  - uid: onenote.OneNote.TableCellCollection.track
+  - uid: 'onenote!OneNote.TableCellCollection#track:member(1)'
     summary: 根据文档中的相应更改来跟踪对象，以便进行自动调整。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 如果你在“.sync”调用之间和按顺序执行“.run”批处理之外使用此对象，并且在对象上设置属性或调用方法时出现“InvalidObjectPath”错误，则需要在首次创建对象时为跟踪的对象集合添加对象。
     name: track()
     fullName: track()
@@ -191,9 +191,9 @@ items:
       content: 'track(): OneNote.TableCellCollection;'
       return:
         type:
-          - onenote.OneNote.TableCellCollection
+          - 'onenote!OneNote.TableCellCollection:class'
         description: ''
-  - uid: onenote.OneNote.TableCellCollection.untrack
+  - uid: 'onenote!OneNote.TableCellCollection#untrack:member(1)'
     summary: 释放与此对象关联的内存（如果先前已跟踪过）。 此调用是 context.trackedObjects.add(thisObject) 的缩写。 拥有许多跟踪对象会降低主机应用程序的速度，因此请在使用完毕后释放所添加的任何对象。 在内存释放生效之前，你需要调用“context.sync()”。
     name: untrack()
     fullName: untrack()
@@ -204,5 +204,39 @@ items:
       content: 'untrack(): OneNote.TableCellCollection;'
       return:
         type:
-          - onenote.OneNote.TableCellCollection
+          - 'onenote!OneNote.TableCellCollection:class'
         description: ''
+references:
+  - uid: 'onenote!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'onenote!OneNote.RequestContext:class'
+    name: RequestContext
+  - uid: 'onenote!OneNote.TableCell:class'
+    name: OneNote.TableCell
+  - uid: 'onenote!OneNote.TableCellCollection#items~0:complex'
+    name: 'OneNote.TableCell[]'
+    fullName: 'OneNote.TableCell[]'
+    spec.typeScript:
+      - uid: 'onenote!OneNote.TableCell:class'
+        name: OneNote.TableCell
+        fullName: OneNote.TableCell
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'onenote!OneNote.TableCellCollection:class'
+    name: OneNote.TableCellCollection
+  - uid: 'onenote!OneNote.TableCellCollection#load~0:complex'
+    name: OneNote.Interfaces.TableCellCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions
+    fullName: OneNote.Interfaces.TableCellCollectionLoadOptions & OneNote.Interfaces.CollectionLoadOptions
+    spec.typeScript:
+      - uid: 'onenote!OneNote.Interfaces.TableCellCollectionLoadOptions:interface'
+        name: OneNote.Interfaces.TableCellCollectionLoadOptions
+        fullName: OneNote.Interfaces.TableCellCollectionLoadOptions
+      - name: ' & '
+        fullName: ' & '
+      - uid: 'onenote!OneNote.Interfaces.CollectionLoadOptions:interface'
+        name: OneNote.Interfaces.CollectionLoadOptions
+        fullName: OneNote.Interfaces.CollectionLoadOptions
+  - uid: 'onenote!OfficeExtension.LoadOption:interface'
+    name: OfficeExtension.LoadOption
+  - uid: 'onenote!OneNote.Interfaces.TableCellCollectionData:interface'
+    name: OneNote.Interfaces.TableCellCollectionData
